--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,14 +1,81 @@
-<!-- <app-data-table></app-data-table> -->
+<div class="manage-products">
+  <div class="manage-products__header">
+    <h2>Products List</h2>
+    <button mat-raised-button color="primary" (click)="addProduct()">
+      Add Product
+    </button>
+  </div>
+  <div class="manage-products__table">
+    <table
+      mat-table
+      [dataSource]="products"
+      *ngIf="products.length"
+      class="mat-elevation-z8 demo-table"
+    >
+      <!-- S.No Column -->
+      <ng-container matColumnDef="sno">
+        <th mat-header-cell *matHeaderCellDef>Product Id.</th>
+        <td mat-cell *matCellDef="let element; let index">{{ element._id }}</td>
+      </ng-container>
 
-<ag-grid-angular
-  style="width: 100%; height: 100%"
-  class="ag-theme-alpine"
-  [rowData]="productList | async"
-  [columnDefs]="displayColumns"
-  [paginationPageSize]="paginationSize"
-  [rowSelection]="'rowSelection'"
-  [pagination]="true"
-  [colResizeDefault]="'shift'"
-  (gridReady)="onGridReady($event)"
->
-</ag-grid-angular>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+
+      <!-- Image Column -->
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef>Image</th>
+        <td mat-cell *matCellDef="let element">
+          <img class="manage-products__image" src="{{ element.image }}" />
+        </td>
+      </ng-container>
+
+      <!-- Price Column -->
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.price | currency }}
+        </td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let element">
+          <!-- <button
+            class="manage-products__action-btn"
+            mat-stroked-button
+            color="primary"
+            (click)="updateProduct(element)"
+          >
+            Edit
+          </button> -->
+
+          <!-- <button
+            class="manage-products__action-btn"
+            mat-stroked-button
+            color="warn"
+            (click)="deleteProduct(element.id)"
+          >
+            Delete
+          </button> -->
+          <i
+            class="fas fa-edit"
+            [routerLink]="['', 'admin', 'product', element.id, 'edit']"
+          ></i>
+          <i class="fas fa-trash alert" (click)="deleteProduct(element.id)"></i>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="productsCols"></tr>
+      <tr mat-row *matRowDef="let row; columns: productsCols"></tr>
+    </table>
+  </div>
+
+  <div *ngIf="!products.length">
+    <h2>No products found</h2>
+    <p>Click on add button to create new products</p>
+  </div>
+</div>
