--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,41 +1,3 @@
-<!-- <form [formGroup]="form" class="user-form">
-  <p>
-    <mat-form-field appearance="legacy">
-      <mat-label>Legacy form field</mat-label>
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="standard">
-      <mat-label>Standard form field</mat-label>
-      <input formControlName="email" matInput placeholder="Email" />
-    </mat-form-field>
-  </p>
-
-  <p>
-    <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
-      <input formControlName="password" matInput placeholder="Password" />
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
-      <input
-        formControlName="confirmPassword"
-        matInput
-        placeholder="Confirm Password"
-        type="password"
-      />
-    </mat-form-field>
-  </p>
-  <p>
-    <mat-form-field appearance="fill">
-      <mat-label>Fill form field</mat-label>
-      <mat-checkbox formControlName="isStaff">Is Staff ?</mat-checkbox>
-    </mat-form-field>
-  </p>
-</form> -->
-
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
     <!-- <mat-card-header>
@@ -71,7 +33,7 @@
         >
           Password Mismatch
         </small> -->
-        <mat-checkbox formControlName="isStaff">Is Staff ?</mat-checkbox>
+        <mat-checkbox formControlName="isAdmin">Is Admin ?</mat-checkbox>
       </mat-card-content>
 
       <button mat-stroked-button color="accent" class="btn-block">
